5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1594_2426.log
== TEST (2019-03-30 21:22:45) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

-- OUTPUT:
25.6666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:06) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

-- OUTPUT:
25.6666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:23:21) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

-- EXECUTION TIME:
0.159173
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:

-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:

-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:23:23) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

-- OUTPUT:
25.6666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:25:12) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

c = float(input("distancia:"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:25:48) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

c = float(input("distancia:"))

-- EXECUTION TIME:
0.131337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2426/main.py", line 6, in <module>
    c = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:31:30) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

c = float(input("distancia:"))

d = float(input("litrosgastos:"))

var = 
-- ERROR:
File "XXXX", line 10
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:31:44) 
-- CODE:
#tempo gasto
a = float(input("tempo:"))
#velocidade media
b = float(input("velocidade:"))

c = float(input("distancia:"))

d = float(input("litrosgastos:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:37:32) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- EXECUTION TIME:
0.166842
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
tempo:velocidade:96.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:37:33) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:38:25) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:38:38) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:38:58) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- EXECUTION TIME:
0.229051
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:39:05) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:39:31) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.143272
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:42:31) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = a*b
z = x/12
print(x)
print(z)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:42:32) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = a*b
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.15915
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
900.0
75.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:42:32) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = a*b
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.174555
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
900.0
75.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:42:32) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = a*b
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.201683
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1594/2426/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:42:39) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.129006
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:43:30) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
print(z)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:43:52) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.299028
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:55:39) 
-- CODE:
a = float(input("tempo:"))
b = float(input("velocidade:"))

x = b*a
z = x/12
print(x)
print(z)
-- EXECUTION TIME:
0.145821
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
